kubernetes/kube/checkmk/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkmk # name of the deployment
  namespace: monitoring # name of the namespace
  labels:
    app: checkmk # name of your application
# .......................................
spec:
  replicas: 2 # Number of replicas
  selector:
    matchLabels:
      app: checkmk # name of your application
  template:
    metadata:
      labels:
        app: checkmk # name of your application
    spec:
      containers:
        - name: checkmk # name of the container
          image: checkmk/check-mk-free:2.1.0p11 # the image you want to run
          # image: checkmk/check-mk-raw:2.1.0p11 # the image you want to run
          resources:
            # limits:
            #   memory: 1Gi
            #   cpu: "2"
            requests:
              memory: 500Mi
              cpu: "1"
          ports:
            - name: http
              containerPort: 5000 # the port that your application uses
              protocol: TCP
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 5000
          #     scheme: HTTP
          #   initialDelaySeconds: 5
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 5000
          #   timeoutSeconds: 2
          #   initialDelaySeconds: 15
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: tmpfs
              mountPath: /opt/omd/sites/cmk/tmp
            - name: data
              mountPath: /omd/sites
      restartPolicy: Always
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: tmpfs
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
        - name: data
          persistentVolumeClaim:
            claimName: checkmk-data
