kubernetes/kube/checkmk/node-collector.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: node-collector-container-metrics
    # This label allows checkmk to identify the node-collector. Removing or modifying this label
    # is supported, but will remove features related to this label.
    node-collector: "container-metrics"
  name: node-collector-container-metrics
  namespace: checkmk-n
spec:
  selector:
    matchLabels:
      app: node-collector-container-metrics
      name: node-collector-container-metrics
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: node-collector-container-metrics
        name: node-collector-container-metrics
    spec:
      containers:
        # You can find available images on
        # https://hub.docker.com/r/checkmk/kubernetes-collector/tags
        - image: checkmk/kubernetes-collector:main_<YYYY.MM.DD>
          imagePullPolicy: Always
          name: container-metrics-collector
          # HTTPS: Uncomment volumeMounts checkmk-ca-cert for HTTPS
          # volumeMounts:
          #   - name: checkmk-ca-cert
          #     mountPath: /etc/ca-certificates/checkmk-ca-cert.pem
          #     subPath: checkmk-ca-cert.pem
          #     readOnly: true
          command:
            - "/usr/local/bin/checkmk-container-metrics-collector"
          # HTTPS: Uncomment secure-protocl and verify-ssl args for HTTP
          args:
            # - "--secure-protocol"
            # - "--verify-ssl"
            # host DNS can be determined as:
            # <service name>.<namespace name>
            - "--host=cluster-collector.checkmk-monitoring"
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 150m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
        # You can find available images on
        # https://hub.docker.com/r/checkmk/cadvisor-patched/tags
        - image: checkmk/cadvisor-patched:main_<YYYY.MM.DD>
          imagePullPolicy: Always
          name: cadvisor
          command:
            - "/usr/bin/cadvisor"
          args:
            - "--housekeeping_interval=30s"
            - "--max_housekeeping_interval=35s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--store_container_labels=false"
            - "--whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace,io.kubernetes.pod.uid"
            - "--global_housekeeping_interval=30s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--disable_metrics=percpu,process,sched,tcp,udp,diskIO,disk,network"
            - "--allow_dynamic_housekeeping=true"
            - "--storage_duration=1m0s"
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 150m
              memory: 200Mi
          volumeMounts:
            - name: var-run
              mountPath: /var/run
              # TODO:
              # readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
      serviceAccountName: node-collector-container-metrics
      # automountServiceAccountToken: false
      # TODO:
      # https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/#service-account-token-volume-projection
      terminationGracePeriodSeconds: 30
      # HTTPS: Uncomment volume checkmk-ca-cert for HTTPS
      volumes:
        # - name: checkmk-ca-cert
        #   secret:
        #     secretName: cluster-collector-secret
        #     items:
        #       - key: checkmk-ca-cert
        #         path: checkmk-ca-cert.pem
        - name: var-run
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: docker
          hostPath:
            path: /var/lib/docker
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: node-collector-machine-sections
    # This label allows checkmk to identify the node-collector. Removing or modifying this label
    # is supported, but will remove features related to this label.
    node-collector: "machine-sections"
  name: node-collector-machine-sections
  namespace: checkmk-n
spec:
  selector:
    matchLabels:
      app: node-collector-machine-sections
      name: node-collector-machine-sections
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: node-collector-machine-sections
        name: node-collector-machine-sections
    spec:
      containers:
        # You can find available images on
        # https://hub.docker.com/r/checkmk/kubernetes-collector/tags
        - image: checkmk/kubernetes-collector:main_<YYYY.MM.DD>
          imagePullPolicy: Always
          name: machine-sections-collector
          # HTTPS: Uncomment volumeMounts checkmk-ca-cert for HTTPS
          # volumeMounts:
          #   - name: checkmk-ca-cert
          #     mountPath: /etc/ca-certificates/checkmk-ca-cert.pem
          #     subPath: checkmk-ca-cert.pem
          #     readOnly: true
          command:
            - "/usr/local/bin/checkmk-machine-sections-collector"
          # HTTPS: Uncomment secure-protocl and verify-ssl args for HTTP
          args:
            # - "--secure-protocol"
            # - "--verify-ssl"
            # host DNS can be determined as:
            # <service name>.<namespace name>
            - "--host=cluster-collector.checkmk-monitoring"
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 150m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
      serviceAccountName: node-collector-machine-sections
      terminationGracePeriodSeconds: 30
      # HTTPS: Uncomment volume checkmk-ca-cert for HTTPS
      # volumes:
      #   - name: checkmk-ca-cert
      #     secret:
      #       secretName: cluster-collector-secret
      #       items:
      #         - key: checkmk-ca-cert
      #           path: checkmk-ca-cert.pem
