kubernetes/kube/checkmk/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: checkmk
  namespace: checkmk-n
# .......................................
spec:
  type: ClusterIP
  selector:
    app: checkmk
  sessionAffinity: None
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-collector
  namespace: checkmk-n
spec:
  # If ingress is used:
  # type: LoadBalancer
  selector:
    app: cluster-collector
  ports:
    - name: api
      port: 80
      targetPort: 10050
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-collector-nodeport
  namespace: checkmk-n
spec:
  type: NodePort
  selector:
    app: cluster-collector
  ports:
    - name: cluster-collector
      port: 30035
      nodePort: 30035
      targetPort: 10050
      protocol: TCP
