kubernetes/kube/checkmk/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkmk
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: vm-traefik-cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ""
# .......................................
spec:
  rules:
    - host: checkmk.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkmk # the name of the service
                port:
                  number: 5000 # service port-number
  tls:
    - hosts:
        - checkmk.home.local
      secretName: checkmk.home.local
